--- a/dotfiles/waybar/config.jsonc
+++ b/dotfiles/waybar/config.jsonc
@@ -4,7 +4,7 @@
 	"modules-left": ["hyprland/workspaces", "mpd", "hyprland/window"],
 	"modules-center": ["clock"],
 	"modules-right": ["tray", "pulseaudio", "backlight", "battery"],
-	"margin": "8 8 0 8",
+	"margin": "0",
 	"spacing": 0,
 	"hyprland/workspaces": {
 		"format": "{icon}",
