Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -7,8 +7,56 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
+exec-once = systemctl --user start hyprpolkitagent
+exec-once = hypridle
+exec-once = thunar --daemon
+exec-once = dunst
+exec-once = swww-daemon
+exec-once = waybar
+
 $main_mod = SUPER
 $alt_mod = SUPER + SHIFT
+
+bindr = $alt_mod, K, exec, hyprctl kill
+bindr = $alt_mod, C, killactive
+bindor = $alt_mod, Q, exit
+
+bindr = $main_mod, P, exec, pkill wofi || wofi -S drun
+bindr = $alt_mod, Return, exec, foot
+bindr = $alt_mod, B, exec, xdg-open "https://"
+bindr = $alt_mod, H, exec, xdg-open "~"
+
+bindm = $main_mod, mouse:272, movewindow
+bindm = $main_mod, mouse:273, resizewindow
+
+bind = $main_mod, 1, workspace, 1
+bind = $main_mod, 2, workspace, 2
+bind = $main_mod, 3, workspace, 3
+bind = $main_mod, 4, workspace, 4
+bind = $main_mod, 5, workspace, 5
+bind = $main_mod, 6, workspace, 6
+bind = $main_mod, 7, workspace, 7
+bind = $alt_mod, 1, movetoworkspacesilent, 1
+bind = $alt_mod, 2, movetoworkspacesilent, 2
+bind = $alt_mod, 3, movetoworkspacesilent, 3
+bind = $alt_mod, 4, movetoworkspacesilent, 4
+bind = $alt_mod, 5, movetoworkspacesilent, 5
+bind = $alt_mod, 6, movetoworkspacesilent, 6
+bind = $alt_mod, 7, movetoworkspacesilent, 7
+bind = $main_mod, 0, togglespecialworkspace, temp
+
+bind = $main_mod, F, togglefloating, active
+bind = $alt_mod, F, fullscreenstate, 2 2
+
+bind = $main_mod, I, cyclenext, prev
+bind = $main_mod, I, alterzorder, top
+bind = $main_mod, O, cyclenext
+bind = $main_mod, O, alterzorder, top
+
+bind = $main_mod, G, togglegroup
+bind = $main_mod, N, changegroupactive, b
+bind = $main_mod, M, changegroupactive, f
+bind = $alt_mod, G, moveoutofgroup, active
 
 general {
 	border_size = 2
@@ -76,10 +124,3 @@ render {
 	direct_scanout = 1
 	new_render_scheduling = true
 }
-
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = hypridle
-exec-once = thunar --daemon
-exec-once = dunst
-exec-once = swww-daemon
-exec-once = waybar
