Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -17,8 +17,7 @@ exec-once = waybar
 $main_mod = SUPER
 $alt_mod = SUPER + SHIFT
 
-bindr = $alt_mod, K, exec, hyprctl kill
-bindr = $alt_mod, C, killactive
+bind = $alt_mod, C, killactive
 bindor = $alt_mod, Q, exit
 
 bindr = $main_mod, P, exec, pkill wofi || wofi -S drun
@@ -48,15 +47,30 @@ bind = $main_mod, 0, togglespecialworkspace, temp
 bind = $main_mod, F, togglefloating, active
 bind = $alt_mod, F, fullscreenstate, 2 2
 
-bind = $main_mod, I, cyclenext, prev
-bind = $main_mod, I, alterzorder, top
-bind = $main_mod, O, cyclenext
-bind = $main_mod, O, alterzorder, top
+bind = $main_mod, T, cyclenext, prev
+bind = $main_mod, T, alterzorder, top
+bind = $main_mod, Y, cyclenext
+bind = $main_mod, Y, alterzorder, top
 
 bind = $main_mod, G, togglegroup
 bind = $main_mod, N, changegroupactive, b
 bind = $main_mod, M, changegroupactive, f
 bind = $alt_mod, G, moveoutofgroup, active
+bind = $main_mod + ALT, K, movewindoworgroup, u
+bind = $main_mod + ALT, J, movewindoworgroup, d
+bind = $main_mod + ALT, H, movewindoworgroup, l
+bind = $main_mod + ALT, L, movewindoworgroup, r
+
+binde = $alt_mod, K, resizeactive, 0 -20
+binde = $alt_mod, J, resizeactive, 0 20
+binde = $alt_mod, H, resizeactive, -20 0
+binde = $alt_mod, L, resizeactive, 20 0
+
+bind = $main_mod, Return, layoutmsg, swapwithmaster
+bind = $main_mod, J, layoutmsg, cyclenext
+bind = $main_mod, K, layoutmsg, cycleprev
+bind = $main_mod, I, layoutmsg, addmaster
+bind = $main_mod, D, layoutmsg, removemaster
 
 general {
 	border_size = 2
@@ -123,4 +137,10 @@ opengl {
 render {
 	direct_scanout = 1
 	new_render_scheduling = true
+}
+
+master {
+	mfact = 0.5
+	new_status = inherit
+	new_on_top = true
 }
