Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -23,7 +23,7 @@ bindor = $alt_mod, Q, exit
 bindr = $main_mod, P, exec, pkill wofi || wofi -S drun
 bindr = $alt_mod, Return, exec, foot
 bindr = $alt_mod, B, exec, xdg-open "https://"
-bindr = $alt_mod, H, exec, xdg-open "~"
+bindr = $alt_mod, E, exec, xdg-open ~
 
 bindm = $main_mod, mouse:272, movewindow
 bindm = $main_mod, mouse:273, resizewindow
