Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -18,7 +18,7 @@ $main_mod = SUPER
 $alt_mod = SUPER + SHIFT
 
 bind = $alt_mod, C, killactive
-bindo = $alt_mod, Q, exit
+bind = $alt_mod, Q, exit
 
 bindr = $main_mod, P, exec, pkill wofi || wofi -S drun
 bindr = $alt_mod, Return, exec, foot
