Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -114,8 +114,12 @@ group {
 	col.border_locked_inactive = $base
 
 	groupbar {
+		gradients = true
 		rounding = 0
-		text_color = $text
+		text_color = $base
+		text_color_inactive = $text
+		text_color_locked_active = $base
+		text_color_locked_inactive = $text
 		col.active = $sky
 		col.inactive = $base
 		col.locked_active = $sky
