Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -7,12 +7,12 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
+exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
-exec-once = thunar --daemon
 exec-once = dunst
-exec-once = swww-daemon
 exec-once = waybar
+exec-once = thunar --daemon
 
 $main_mod = SUPER
 $alt_mod = SUPER + SHIFT
@@ -24,6 +24,10 @@ bindr = $main_mod, P, exec, pkill wofi || wofi -S drun
 bindr = $alt_mod, Return, exec, foot
 bindr = $alt_mod, B, exec, xdg-open "https://"
 bindr = $alt_mod, E, exec, xdg-open ~
+
+bindr = $main_mod, code:47, exec, hyprpicker -an -f hex
+bindr = , Print, exec, grim - | tee "$HOME/Pictures/Screenshot-$(date +%s).png" | wl-copy
+bindr = SHIFT, Print, exec, slurp | grim -g - - | tee "$HOME/Pictures/Screenshot-$(date +%s).png" | wl-copy
 
 bindm = $main_mod, mouse:272, movewindow
 bindm = $main_mod, mouse:273, resizewindow
