--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -7,7 +7,7 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
-exec-once = hyprpaper
+exec-once = swww-daemon
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = dunst
