Updated Hyprland configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -39,6 +39,7 @@ bind = $main_mod, 4, workspace, 4
 bind = $main_mod, 5, workspace, 5
 bind = $main_mod, 6, workspace, 6
 bind = $main_mod, 7, workspace, 7
+bind = $main_mod, 0, togglespecialworkspace, temp
 bind = $alt_mod, 1, movetoworkspacesilent, 1
 bind = $alt_mod, 2, movetoworkspacesilent, 2
 bind = $alt_mod, 3, movetoworkspacesilent, 3
@@ -46,7 +47,7 @@ bind = $alt_mod, 4, movetoworkspacesilent, 4
 bind = $alt_mod, 5, movetoworkspacesilent, 5
 bind = $alt_mod, 6, movetoworkspacesilent, 6
 bind = $alt_mod, 7, movetoworkspacesilent, 7
-bind = $main_mod, 0, togglespecialworkspace, temp
+bind = $alt_mod, 0, movetoworkspacesilent, special:temp
 
 bind = $main_mod, F, togglefloating, active
 bind = $alt_mod, F, fullscreenstate, 2 2
