Added XDG desktop portal configuration

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -19,6 +19,7 @@ $alt_mod = SUPER + SHIFT
 
 bind = $alt_mod, C, killactive
 bind = $alt_mod, Q, exit
+bind = $alt_mod, R, exec, loginctl lock-session
 
 bindr = $main_mod, P, exec, pkill wofi || wofi -S drun
 bindr = $alt_mod, Return, exec, foot
@@ -135,6 +136,7 @@ group {
 }
 
 misc {
+	disable_hyprland_logo = true
 	font_family = Noto Sans
 	disable_autoreload = true
 }
@@ -149,6 +151,7 @@ render {
 }
 
 master {
+	allow_small_split = true
 	mfact = 0.5
 	new_status = inherit
 	new_on_top = true
