Inverted group related keybinds

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -58,10 +58,10 @@ bind = $main_mod, T, alterzorder, top
 bind = $main_mod, Y, cyclenext
 bind = $main_mod, Y, alterzorder, top
 
-bind = $main_mod, G, togglegroup
+bind = $alt_mod, G, togglegroup
 bind = $main_mod, N, changegroupactive, b
 bind = $main_mod, M, changegroupactive, f
-bind = $alt_mod, G, moveoutofgroup, active
+bind = $main_mod, G, moveoutofgroup, active
 bind = $main_mod + ALT, K, movewindoworgroup, u
 bind = $main_mod + ALT, J, movewindoworgroup, d
 bind = $main_mod + ALT, H, movewindoworgroup, l
